Fix spacing too

--- a/docker/infrastructure/portal/src/styles/global.css
+++ b/docker/infrastructure/portal/src/styles/global.css
@@ -323,6 +323,10 @@ body {
   background-color: var(--wa-color-surface-default) !important;
 }
 
+.tailscale-peer {
+  --spacing: var(--wa-space-s);
+}
+
 .tailscale-peer .body {
   width: 100%;
 }
